src/components/timeline/timeline.module.scss
@import '../../../styles/variables.scss';
.title {
  font-size: 18px;
  font-weight: 600;
  @media (max-width: 768px) {
    font-size: 16px;
  }
  text-shadow: $text-glow;
  background: $web3-gradient;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.company-name:hover {
  background: $web3-gradient;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.period {
  font-size: 12px;
  font-weight: 200;
  margin-bottom: 0.125em;
}

.content {
  p {
    font-size: 14px;
    text-align: justify;
    text-justify: distribute;
    max-width: 400px;
  }
}

